# audioHub

./: CMakeLists.txt  audioHub.code-workspace  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/instructions/: prompts.md.instructions.md
main/: CMakeLists.txt  Kconfig.projbuild  bt_app_av.c  bt_app_core.c  bt_main.c  main.c  softap_example_main.c  tcp_audio.c  tcp_audio.h  udp_audio.c  udp_audio.h
